--- a/demo/index.htm
+++ b/demo/index.htm
@@ -36,6 +36,7 @@
       right:0;
       top:0;
       border-top:1px dashed #FC9;
+      opacity:0.8;
     }
     #h{
       position:absolute;
@@ -43,6 +44,7 @@
       top:0;
       bottom:10px;
       border-left:1px dashed #FC9;
+      opacity:0.8;
     }
     #top,#left{
       position:absolute;
@@ -57,6 +59,22 @@
       font-weight:400;
       padding:0 3px;
       border-radius:2px;
+      opacity:0.8;
+    }
+    #middle{
+      position:absolute;
+      left:0;
+      top:0;
+    }
+    #middle b{
+      position:absolute;
+      left:-2px;
+      top:-2px;
+      display:block;
+      width:4px;
+      height:4px;
+      border:1px solid #F33;
+      border-radius:4px;
       opacity:0.8;
     }
     #left b{
@@ -100,7 +118,7 @@
   <canvas id="canvas" width="600" height="300" style="width:300px;height:150px;"></canvas>
   <span id="v"></span>
   <span id="h"></span>
-  <span id="middle"></span>
+  <span id="middle"><b></b></span>
   <span id="left"><b></b></span>
   <span id="right"><b></b></span>
   <span id="top"><b></b></span>
@@ -156,6 +174,7 @@
 
     var x0 = $con.offset().left;
     function onStart(e) {
+      e.preventDefault();
       var x = e.touches[0].pageX - x0;
       x *= 2;
       for(var i = 0, len = coords.length; i < len; i++) {
@@ -164,6 +183,8 @@
           var y = coords[i][1];
           $v.css('top', y / 2 + 'px');
           $h.css('left', x / 2 + 'px');
+          $middle.css('top', y / 2 + 'px');
+          $middle.css('left', x / 2 + 'px');
           $left.css('top', y / 2 + 'px');
           var v = search.data.price[i]
           $left.find('b').text(v);
